# ImguiAndroid

./: README.md  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/imguitestmenu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImguiEGL.cpp  ImguiEGL.h  MainMemu.cpp  native-lib.cpp  pch.h
app/src/main/cpp/ImGui/: Imgui_Android_Input.cpp  Imgui_Android_Input.h  imgui.cpp  imgui.h  imgui_impl_android.cpp  imgui_widgets.cpp
app/src/main/java/com/example/imguitestmenu/: App.java  CallData.java  GLES3JNILib.java  MainActivity.java
app/src/main/java/com/example/imguitestmenu/Services/: FloatService.java
app/src/main/java/com/example/imguitestmenu/Utils/: ClipboardUtil.java  CrashHandler.java  ErrorActivity.java  Orientation.java
app/src/main/java/com/example/imguitestmenu/Views/: ContainerView.java  EventClass.java  TouchView.java  WindowManagerLayoutParams.java  mFloatButton.java
app/src/main/res/drawable-v24/: edit_back.xml  edit_back_end.xml  edit_back_start.xml
app/src/main/res/layout/: activity_main.xml  error_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/imguitestmenu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
